fix: set the maximum page width and adjust the alignment, replacing App.css with App.module.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import url('./fonts/fonts.css');
 
 body {
-  margin: 0 auto;
-  max-width: 1280px;
   font-family: JetBrains Mono, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,3 +12,7 @@ body {
   font-weight: normal;
 }
 
+.page {
+  margin: 0 auto;
+  max-width: 1280px;
+}
